client/src/App.css
/* ... */
  
  .create-channel__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 62px;
    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
    padding-right: 20px;
  }
  
  .create-channel__header p {
    font-family: Helvetica Neue, sans-serif;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    color: #2c2c30;
    margin-left: 20px;
  }
  
  .create-channel__header svg {
    cursor: pointer;
  }
  
  .channel-name-input__wrapper {
    display: flex;
    flex-direction: column;
    height: 169px;
    padding-left: 20px;
    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
  }
  
  .channel-name-input__wrapper p {
    font-family: Helvetica Neue, sans-serif;
    font-size: 16px;
    line-height: 120%;
    color: #2c2c30;
    margin-top: 30px;
  }
  
  .channel-name-input__wrapper input {
    font-family: Helvetica Neue, sans-serif;
    font-size: 18px;
    color: rgba(0, 0, 0, 0.5);
    height: 50px;
    width: 540px;
    background: #f7f6f8;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    border-radius: 8px;
    padding-left: 16px;
  }
  
  .channel-name-input__wrapper input:focus {
    border: 1px solid var(--primary-color);
    outline: none;
  }
  
  .channel-name-input__wrapper input::placeholder {
    font-weight: 300;
    color: rgba(0, 0, 0, 0.5);
  }
  
  .create-channel__button-wrapper {
    height: 82px;
    background: #f7f6f8;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    border-bottom-right-radius: 16px;
  
    padding: 0px 10px;
  }
  
  .create-channel__button-wrapper p {
    background: var(--primary-color);
    font-family: Helvetica Neue, sans-serif;
    font-weight: bold;
    font-size: 18px;
    padding: 10px 20px;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
  }
  
  .user-list__container {
    display: flex;
    flex-direction: column;
    height: 100%;
  }
  
  .user-list__header {
    display: flex;
    align-items: center;
    margin: 0px 20px;
    justify-content: space-between;
  }
  
  .user-list__header p {
    font-family: Helvetica Neue, sans-serif;
    font-size: 14px;
    line-height: 17px;
    color: #858688;
    margin-top: 16px;
  }
  
  .user-list__header p:first-child {
    flex: 2;
  }
  
  .user-list__header p:nth-child(2) {
    flex: 0.5;
    text-align: right;
    margin: 0px 20px;
  }
  
  .user-list__message {
    font-family: Helvetica Neue, sans-serif;
    font-size: 16px;
    color: #2c2c30;
    margin: 20px;
  }
  
  .user-item__wrapper {
    display: flex;
    align-items: center;
    margin: 0px 20px;
    justify-content: space-between;
  }
  
  .user-item__wrapper:hover {
    background: #f7f6f8;
    cursor: pointer;
  }
  
  .user-item__name-wrapper {
    display: flex;
    align-items: center;
    flex: 2;
    text-align: left;
  }
  
  .user-item__wrapper p {
    font-family: Helvetica Neue, sans-serif;
    font-size: 14px;
    line-height: 17px;
    color: #2c2c30;
    word-break: break-all;
  }
  
  .user-item__name {
    font-weight: 500;
  }
  
  .user-item__last-active {
    font-weight: 400;
    width: 30%;
    flex: 0.5;
    text-align: right;
  
    margin: 0px 20px;
  }
  
  .user-item__invite-empty {
    height: 28px;
    width: 28px;
    background: #f7f6f8;
    border: 1px solid #dedddf;
    border-radius: 14px;
    box-sizing: border-box;
    margin-left: 2px;
  }
  
  .edit-channel__container {
    display: flex;
    flex-direction: column;
    height: 100%;
  }
  
  .edit-channel__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 62px;
    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
    padding-right: 20px;
  }
  
  .edit-channel__header p {
    font-family: Helvetica Neue, sans-serif;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    color: #2c2c30;
    margin-left: 20px;
  }
  
  .edit-channel__header svg {
    cursor: pointer;
  }
  
  .channel-name-input__wrapper {
    display: flex;
    flex-direction: column;
    height: 169px;
    padding-left: 20px;
    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
  }
  
  .channel-name-input__wrapper p {
    font-family: Helvetica Neue, sans-serif;
    font-size: 16px;
    line-height: 120%;
    color: #2c2c30;
    margin-top: 30px;
  }
  
  .channel-name-input__wrapper input {
    font-family: Helvetica Neue, sans-serif;
    font-size: 18px;
    color: rgba(0, 0, 0);
    height: 50px;
    width: 90%;
    background: #f7f6f8;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    border-radius: 8px;
    padding-left: 16px;
  }
  
  .channel-name-input__wrapper input:focus {
    border: 1px solid var(--primary-color);
    outline: none;
  }
  
  .channel-name-input__wrapper input::placeholder {
    font-weight: 300;
    color: rgba(0, 0, 0, 0.5);
  }
  
  .edit-channel__button-wrapper {
    height: 82px;
    background: #f7f6f8;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    border-bottom-right-radius: 16px;
  }
  
  .edit-channel__button-wrapper p {
    background: var(--primary-color);
    font-family: Helvetica Neue, sans-serif;
    font-weight: bold;
    font-size: 18px;
    padding: 10px 20px;
    color: #ffffff;
    margin-right: 30px;
    border-radius: 8px;
    cursor: pointer;
  }
  
  .team-channel-header__container {
    position: relative;
    height: 62px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
    background: #ffffff;
    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
    border-top-right-radius: 16px;
    z-index: 1;
  }
  
  .team-channel-header__channel-wrapper {
    display: flex;
    align-items: center;
  }
  
  .team-channel-header__channel-wrapper svg {
    cursor: pointer;
  }
  
  .team-channel-header__name {
    font-family: Helvetica Neue, sans-serif;
    font-weight: bold;
    font-size: 18px;
    color: #2c2c30;
    margin-right: 8px;
  }
/* ... */

